data/forge_javadoc/1.8.9/processed/net_minecraftforge_fluids_BlockFluidFinite.md
# BlockFluidFinite

**Inheritance:** java.lang.Object → net.minecraft.block.Block → net.minecraftforge.fluids.BlockFluidBase → net.minecraftforge.fluids.BlockFluidFinite

## Class signature

```java
public class BlockFluidFinite extends BlockFluidBase
```

## Methods

- `boolean canCollideCheck(IBlockState state, boolean fullHit)`
- `boolean canDrain(World world, BlockPos pos)` — Check to see if a block can be drained.
- `FluidStack drain(World world, BlockPos pos, boolean doDrain)` — Attempt to drain the block.
- `int getMaxRenderHeightMeta()`
- `int getQuantaValue(IBlockAccess world, BlockPos pos)`
- `int tryToFlowVerticallyInto(World world, BlockPos pos, int amtToInput)`
- `void updateTick(World world, BlockPos pos, IBlockState state, java.util.Random rand)`

## Fields

- `BlockFluidFinite`